--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -9,7 +9,18 @@
   <div id="breadcrumb">
     <%= link_to "All Podcasts", podcasts_path %>
       <span>/</span>
-      <%= @podcast.title %>
+      <%= link_to @podcast.title, podcast_path(@podcast) %>
+      <span>/</span>
+      <%= @episode.title %>
+  </div>
+
+  <div id="episode_content">
+    <div class="wrapper_skinny2">
+      <img src="images/episodes/Rectangle 36.jpg" alt="" class="current_episode_thumbnail" />
+      <h2><%= @episode.title %></h2>
+      <p class="description"><%= @episode.description %></p>
+
+    </div>
   </div>
 
   <div id="episodes">
@@ -19,7 +30,7 @@
           <li class="cf">
             <div class="episode_thumbnail">
               <a href="#">
-                <img src="images/episodes/Rectangle 36.jpg" alt="Live Slow" />
+                <img src="images/episodes/Rectangle 36.jpg" alt="" />
               </a>
             </div>
             <div class="episode_overview">
