--- a/app/views/episodes/new.html.erb
+++ b/app/views/episodes/new.html.erb
@@ -1,15 +1,37 @@
-<h1>New Episode </h1>
+<div id="podcast_show">
+  <div id="show_banner">
+    <div class="wrapper_skinny">
+      <h1 class="podcast_name">The Balance Podcast Dashboard</h1>
+      <p class="description">discussing the balance between <br> creativity & everything that fuels it</p>
+    </div>
+  </div>
 
-<%= form_for([@podcast, @episode]) do |f| %>
-  <%= f.label :title %><br>
-  <%= f.text_field :title %><br><br>
+  <div id="links" class="cf">
+    <div class="wrapper_skinny2">
+      <ul>
+        <li><%= link_to "Episodes", root_path %></li>
+        <li><%= link_to "New Episode", new_podcast_episode_path(@podcast), class: "current" %></li>
+        <li><%= link_to "Account Settings", edit_podcast_registration_path %></li>
+        <li><%= link_to "View Podcast", podcast_path(current_podcast) %></li>
+      </ul>
+    </div>
+  </div>
 
-  <%= f.label :description %> <br>
-  <%= f.text_area :description %>
+  <div id="form">
+    <div class="wrapper_skinny">
+      <%= form_for([@podcast, @episode]) do |f| %>
 
+        <div class="field">
+          <%= f.label :title %><br>
+          <%= f.text_field :title %>
+        </div>
 
-  <br><br>
+        <div class="field">
+          <%= f.label :description %> <br>
+          <%= f.text_area :description %>
+        </div>
 
-  <%= f.submit %>
-
-<% end %>
+        <%= f.submit class: "button button_highlight button_block" %>
+      <% end %>
+    </div>
+  </div>
