Add paperclip image uploading to podcasts and episodes

--- a/app/views/episodes/edit.html.erb
+++ b/app/views/episodes/edit.html.erb
@@ -1,8 +1,8 @@
 <div id="podcast_show">
   <div id="show_banner">
     <div class="wrapper_skinny">
-      <h1 class="podcast_name">The Balance Podcast Dashboard</h1>
-      <p class="description">discussing the balance between <br> creativity & everything that fuels it</p>
+      <h1> <%= @podcast.title %></h1>
+      <p class="description"><%= @podcast.description %></p>
     </div>
   </div>
 
