--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -16,7 +16,7 @@
 
   <div id="episode_content">
     <div class="wrapper_skinny2">
-      <img src="images/episodes/Rectangle 36.jpg" alt="" class="current_episode_thumbnail" />
+      <%= image_tag @episode.episode_thumbnail.url(:medium), class: "current_episode_thumbnail" %>
       <h2><%= @episode.title %></h2>
       <p class="description"><%= @episode.description %></p>
 
@@ -29,9 +29,7 @@
         <% @episodes.each do |episode| %>
           <li class="cf">
             <div class="episode_thumbnail">
-              <a href="#">
-                <img src="images/episodes/Rectangle 36.jpg" alt="" />
-              </a>
+                <%= image_tag episode.episode_thumbnail.url(:medium) %>
             </div>
             <div class="episode_overview">
               <h2><%= link_to episode.title, podcast_episode_path(@podcast, episode) %></h2>
