--- a/app/views/podcasts/dashboard.html.erb
+++ b/app/views/podcasts/dashboard.html.erb
@@ -1,8 +1,8 @@
 <div id="podcast_show">
   <div id="show_banner">
     <div class="wrapper_skinny">
-      <h1 class="podcast_name">The Balance Podcast Dashboard</h1>
-      <p class="description">discussing the balance between <br> creativity & everything that fuels it</p>
+      <h1> <%= @podcast.title %></h1>
+      <p class="description"><%= @podcast.description %></p>
     </div>
   </div>
 
@@ -24,12 +24,12 @@
           <li class="cf">
             <div class="episode_thumbnail">
               <a href="episode.html">
-                <img src="images/episodes/Rectangle 36.jpg" alt="Live Slow" />
+                <%= image_tag episode.episode_thumbnail.url(:medium) %>
               </a>
             </div>
             <div class="episode_overview">
               <h2><%= link_to episode.title, podcast_episode_path(@podcast, episode) %></h2>
-              <p class="description"> <%= truncate(episode.description, lenght: 350) %> </p>
+              <p class="description"> <%= truncate(episode.description, length: 350) %> </p>
               <div class="authorized_links">
                 <%= link_to "Edit", edit_podcast_episode_path(@podcast, episode) %>
                 <%= link_to "Delete", podcast_episode_path(@podcast, episode), method: :delete, data: {confirm: "Are you sure?"} %>
