--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -18,9 +18,7 @@
         <% @episodes.each do |episode| %>
           <li class="cf">
             <div class="episode_thumbnail">
-              <a href="#">
-                <img src="images/episodes/Rectangle 36.jpg" alt="Live Slow" />
-              </a>
+                <%= image_tag episode.episode_thumbnail.url(:medium) %>
             </div>
             <div class="episode_overview">
               <h2><%= link_to episode.title, podcast_episode_path(@podcast, episode) %></h2>
