--- a/app/views/podcasts/dashboard.html.erb
+++ b/app/views/podcasts/dashboard.html.erb
@@ -44,12 +44,4 @@
 </div>
 
 
-
-
-
-<div class="pagination">
-  <span class="previous_page disabled">previous</span>
-  <em class="current">1</em>
-  <a href="#">2</a>
-  <a class="next_page" href="#">next</a>
-</div>
+  <%= will_paginate @episodes, previous_label: "previous", next_label: "next" %>
