Styled notifications and fixed few bugs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,6 +37,20 @@ body {
   clear: both;
 }
 
+#notice_wrapper {
+	width: 100%;
+	position: absolute;
+	background: rgba(238,93,57, 0.75);
+	z-index: 999;
+	p {
+		color: $white;
+		text-align: center;
+		font-weight: 700;
+		font-size: 1.25rem;
+		padding: .6rem 0;
+	}
+}
+
 .button {
   color: $white;
   text-decoration: none;
