--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,41 +4,37 @@
   <title>Podcast FM</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
 
-  <% if notice %>
-    <p class="notice">
-      <%= notice %>
-    </p>
-  <% elsif alert %>
-    <p class="alert">
-      <%= alert %>
-    </p>
+
+  <% if alert %>
+    <div id = "notice_wrapper">
+      <p class="alert"> <%= alert %></p>
+    </div>
+  <% elsif notice %>
+    <div id = "notice_wrapper">
+      <p class="notice"><%= notice %></p>
+    </div>
   <% end %>
 
-  <header id="main_header" class="cf">
-    <div class="wrapper_wide">
-      <%= link_to "Podcast.fm", root_path, id: "logo" %>
-        <nav>
-          <ul>
-            <% unless podcast_signed_in? %>
-              <li><%= link_to "Explore", podcasts_path %></a></li>
-              <li><%= link_to "Sign in", new_podcast_session_path %></li>
-              <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
-            <% else %>
-              <li><%= link_to "Dashboard", root_path %></li>
-              <li><%= link_to "Explore", podcasts_path %></li>
-              <li><%= link_to "Sign out", destroy_podcast_session_path, method: :delete %></li>
-            <% end %>
-          </ul>
-        </nav>
-    </div>
-  </header>
+  <% unless current_page?(root_path) %>
+    <%= render '/layouts/header'; %>
+  <% end %>
 
 <%= yield %>
+
+<script>
+	$(document).ready(function(){
+		setTimeout(function() {
+			$('#notice_wrapper').fadeOut("slow", function() {
+				$this.remove();
+			});
+		}, 3000 );
+	});
+</script>
 
 </body>
 </html>
